2005-02-20  Daniel Macks  <dmacks@netspace.org>

	* fink.in, fink.8.in: backing out 'snapshot' until after 0.24

2005-02-17  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.23.6, a bugfix
	release on branch_0_23

2005-02-13  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl, fink.info.in: allow the creation of several .info
	files from a single .info.in, depending on %{Distribution}
	* REVISION: new file to specify revision numbers for variant info files

2005-02-09  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* fink.in: Clean up 'fink help' output.
	* fink.8.in: Move 'fink cleanup' description into the 21st century.

2005-02-08  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* bootstrap.pl, postinstall.pl.in: Adjust prompt*() calls for new
	named-parameters API.

2005-02-06  Justin F. Hallett  <thesin@users.sourceforge.net>

	* shlibs.default.in: Changed to use new libncurses5-shlibs shlibs

2005-02-05  Daniel Macks  <dmacks@netspace.org>

	* fink.in: ...which it now does, so reviving it

2005-02-05  Justin F. Hallett  <thesin@users.sourceforge.net>

	* fink.in: backing out last change till it's complete and works

2005-02-05  Daniel Macks  <dmacks@netspace.org>

	* fink.in: Instead of decomposing and rebuilding cmdline, just
	save original @ARGV

2005-02-04  Chris Dolan <chrisdolan@users.sourceforge.net>

	* fink.in, fink.8.in: Add snapshot command

2005-01-31  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* install.sh, fink.conf.5.in: add Fink::Notify modules to install

2005-01-31  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in: Document flags for fetch* modes

2005-01-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl: allow bootstrapping with perl 5.8.6, not perl 5.8.4

2005-01-21  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in: Document show-deps

2005-01-19  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in: Document --build-as-nobody
