@@ -113,7 +113,6 @@ values are:
 .It 1 - Low (don't show tarballs being expanded) 
 .It 2 - Medium (shows almost everything)
 .It 3 - High (shows everything) 
-.It 4 - Pedantic (even shows nitpicky details)
 .El
 The default value is 1. 
 .It Cm NoAutoIndex: Ar boolean 
